TestJavaUtil green, working on JavaLang now